# dream-inertia

./: .gitignore  CHANGES.md  README.md  dream-inertia.opam  dream_inertia.opam  dune-project  flake.nix
.github/workflows/: ci.yml  docs.yml
examples/svelte/: jsconfig.json  package-lock.json  package.json  vite.config.js
examples/svelte/views/: main.js
examples/svelte/views/Pages/: About.svelte  Home.svelte
lib/: context.ml  dream_inertia.ml  dream_inertia.mli  dream_inertia.mli.old  dune  middlewares.ml  page_object.ml  prop.ml  response.ml  template.ml
test/: dune  test_dream_inertia.expected  test_dream_inertia.ml
